Scores: fix table overflow

--- a/src/client/scss/components/_scores.scss
+++ b/src/client/scss/components/_scores.scss
@@ -20,7 +20,7 @@
 
   &__table {
     max-height: calc(100% - fn.add-line(4)); // h2.height
-    overflow: scroll;
+    overflow: auto;
   }
 
 }
